--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -2,7 +2,9 @@
     <div class="footer__container">
         <!-- LEFT -->
         <div class="footer__left">
-            <img src="assets/logo/logo_grau.png" alt="Logo" class="footer__logo" />
+            <a class="footer__home" routerLink="/" (click)="goHome()" aria-label="Home">
+                <img src="assets/logo/logo_grau.png" alt="Logo" class="footer__logo" />
+            </a>
             <div class="footer__info">
                 <strong>DIMIT</strong>
                 <span>Web Developer</span>
