--- a/src/app/pages/home/sections/projects/projects.component.html
+++ b/src/app/pages/home/sections/projects/projects.component.html
@@ -2,10 +2,10 @@
   <div class="container">
 
     <div class="section-header">
-      <span class="section-label mono">Portfolio</span>
-      <h2 class="section-title">Featured Projects</h2>
+      <span class="section-label mono">{{ 'projects.kicker' | t }}</span>
+      <h2 class="section-title">{{ 'projects.title' | t }}</h2>
       <p class="section-description">
-        Explore a selection of my work here - Interact with projects to see my skills in action.
+        {{ 'projects.description' | t }}
       </p>
     </div>
 
@@ -42,7 +42,7 @@
 
     <div class="github-cta">
       <a href="https://github.com/milosdimi?tab=repositories" target="_blank" rel="noopener noreferrer" class="mono">
-        Want to see more projects? <span class="cta-arrow">↗</span>
+        {{ 'projects.more' | t }} <span class="cta-arrow">↗</span>
       </a>
     </div>
   </div>
@@ -57,8 +57,8 @@
           <div class="modal__number mono">{{ getProjectNumber(selectedProject!.id) }}</div>
           <h3 class="modal__title">{{ selectedProject!.title }}</h3>
 
-          <p class="modal__question mono">What is this project about?</p>
-          <p class="modal__desc">{{ selectedProject!.description }}</p>
+          <p class="modal__question mono">{{ 'projects.modal.question' | t }}</p>
+          <p class="modal__desc">{{ selectedProject!.descriptionKey | t }}</p>
 
           <div class="modal__tech">
             <div class="tech" *ngFor="let tech of selectedProject!.technologies">
@@ -73,7 +73,7 @@
             </a>
 
             <a class="btn btn--outline btn--accent" [href]="selectedProject!.liveUrl" target="_blank">
-              Live Test <span class="btn__arrow">↗</span>
+              {{ 'projects.modal.live' | t }} <span class="btn__arrow">↗</span>
             </a>
           </div>
 
@@ -82,7 +82,7 @@
         <div class="modal__right">
           <img class="modal__img" [src]="selectedProject!.imageUrl" [alt]="selectedProject!.title" />
           <button class="modal__next mono" type="button" (click)="nextProject()">
-            Next project <span aria-hidden="true">→</span>
+            {{ 'projects.modal.next' | t }} <span aria-hidden="true">→</span>
           </button>
         </div>
       </div>
