--- a/src/app/pages/home/sections/contact/contact.component.html
+++ b/src/app/pages/home/sections/contact/contact.component.html
@@ -72,5 +72,9 @@
       </p>
     </form>
 
+    <a class="contact__to-top" href="#top" [attr.aria-label]="'contact.toTop' | t">
+      {{ 'contact.toTop' | t }}
+    </a>
+
   </div>
 </section>
