og added, small update

--- a/src/app/pages/home/sections/contact/contact.component.html
+++ b/src/app/pages/home/sections/contact/contact.component.html
@@ -73,7 +73,8 @@
     </form>
 
     <a class="contact__to-top" href="#top" [attr.aria-label]="'contact.toTop' | t">
-      {{ 'contact.toTop' | t }}
+      <span class="contact__to-top-text">{{ 'contact.toTop' | t }}</span>
+      <span class="contact__to-top-arrow" aria-hidden="true">↑</span>
     </a>
 
   </div>
