--- a/src/app/pages/home/sections/hero/hero.component.html
+++ b/src/app/pages/home/sections/hero/hero.component.html
@@ -1,4 +1,25 @@
 <section class="hero">
+  <!-- Marquee (Top - Mobile) -->
+  <div class="marquee marquee--top" aria-hidden="true">
+    <div class="marquee__track">
+      <div class="marquee__row marquee__row--reverse">
+        <div class="marquee__run">
+          <span>{{ 'hero.marquee.remote' | t }}</span><span class="dot">&bull;</span>
+          <span>{{ 'hero.marquee.role' | t }}</span><span class="dot">&bull;</span>
+          <span>{{ 'hero.marquee.based' | t }}</span><span class="dot">&bull;</span>
+          <span>{{ 'hero.marquee.open' | t }}</span><span class="dot">&bull;</span>
+        </div>
+
+        <div class="marquee__run" aria-hidden="true">
+          <span>{{ 'hero.marquee.remote' | t }}</span><span class="dot">&bull;</span>
+          <span>{{ 'hero.marquee.role' | t }}</span><span class="dot">&bull;</span>
+          <span>{{ 'hero.marquee.based' | t }}</span><span class="dot">&bull;</span>
+          <span>{{ 'hero.marquee.open' | t }}</span><span class="dot">&bull;</span>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="container hero__inner">
     <p class="hero__kicker">{{ 'hero.kicker' | t }}</p>
     <h1 class="hero__title">{{ 'hero.title' | t }}</h1>
